# os-simulator

./: .clang-uml  .gitignore  CMakeLists.txt  Doxyfile  Justfile  README.md  flake.nix  generate_report_graphics.sh  step_diagram.puml  uml_simulator.puml  uml_visualizer.puml  verify_implementation.sh
data/procesos/: README.md  config.txt  config_fcfs.txt  config_priority.txt  config_sjf.txt  procesos.txt  procesos_cpu_heavy.txt  procesos_extended.txt  procesos_io_heavy.txt  procesos_large.txt  procesos_mixed.txt  procesos_priority_test.txt  procesos_simple.txt
docs/: THREAD_SYNCHRONIZATION.md
examples/: demo_io.cpp
include/core/: burst.hpp  config_parser.hpp  process.hpp
include/cpu/: cpu_scheduler.hpp  fcfs_scheduler.hpp  priority_scheduler.hpp  round_robin_scheduler.hpp  scheduler.hpp  sjf_scheduler.hpp
include/io/: io_device.hpp  io_fcfs_scheduler.hpp  io_manager.hpp  io_request.hpp  io_round_robin_scheduler.hpp  io_scheduler.hpp
include/memory/: fifo_replacement.hpp  lru_replacement.hpp  (+5 more)
journal-IEEEtran/: .gitignore  README.md  clean.sh  compile-full.sh  compile-quick.sh
presentation/: LIBRERIAS.md
scripts/: build.ps1  build.sh  generate_diagrams.py
src/: main.cpp
tests/: test_algorithm_combinations.cpp  test_blocking_events.cpp  test_config_parser.cpp  test_cpu_metrics.cpp  test_cpu_scheduler.cpp  test_fcfs_scheduler.cpp  test_io_metrics.cpp  test_io_output.cpp  test_io_scheduling.cpp  test_io_system.cpp  test_json_output.cpp  test_memory_cpu_sync.cpp  test_memory_manager.cpp  test_memory_metrics.cpp  test_memory_visualization.cpp  test_metrics.cpp  test_priority_scheduler.cpp  test_queue_snapshot_metrics.cpp  test_round_robin_scheduler.cpp  test_sjf_scheduler.cpp  test_state_transition_metrics.cpp  test_template.cpp
visualization/: __init__.py  __main__.py  base_generator.py  batch_processor.py  context_switches.py  data_loader.py  gantt_chart.py  io_gantt_chart.py  io_operations.py  memory_usage.py  queue_evolution.py  requirements.txt  state_timeline.py  summary_dashboard.py  visualizer.py
(+42 files in other folders)
